--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <select name="task-type" class="select-dropdown"> 
-                    <option value="" disabled selected>Pick a task type</option>
+                    <option value="">Pick a task type</option>
                     <option value="Print">Print</option>
                     <option value="Web">Web</option>
                     <option value="Mobile">Mobile</option>
