--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <input type="text" name="task-name" class="text-input" placeholder="Enter Task Name" />
             </div>
             <div class="form-group">
-                <select name="task-type" class="select-dropdown"> 
+                <select name="task-type" class="select-dropdown">
                     <option value="">Pick a task type</option>
                     <option value="Print">Print</option>
                     <option value="Web">Web</option>
@@ -34,8 +34,18 @@
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks To Do</h2>
             <ul class="task-list" id="tasks-to-do">
-                <li class="task-item">A task is going to be added soon!</li>
             </ul>
+        </section>
+        <!-- Tasks In Progress -->
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks In Progress</h2>
+            <ul class="task-list" id="tasks-in-progress"></ul>
+        </section>
+
+        <!-- Tasks Completed -->
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks Completed</h2>
+            <ul class="task-list" id="tasks-completed"></ul>
         </section>
     </main>
 
